--- a/.github/workflows/buildnpush.yml
+++ b/.github/workflows/buildnpush.yml
@@ -12,4 +12,10 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Docker Hub Login
-              run: echo "mypassword" | docker login -u talha9445 --password-stdin
+              run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+            - name: Build the docker image
+              run: docker build -t talha9445/first-app:latest .
+            - name: Tag the docker image
+              run: docker tag talha9445/first-app:latest talha9445/first-app:latest
+            - name: Push the docker image 
+              run: docker push talha9445/first-app:latest
