--- a/.github/workflows/buildnpush.yml
+++ b/.github/workflows/buildnpush.yml
@@ -14,8 +14,8 @@ jobs:
             - name: Docker Hub Login
               run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
             - name: Build the docker image
-              run: docker build -t talha9445/first-app:latest .
+              run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest .
             - name: Tag the docker image
-              run: docker tag talha9445/first-app:latest talha9445/first-app:latest
+              run: docker tag first-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
             - name: Push the docker image 
-              run: docker push talha9445/first-app:latest
+              run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
