--- a/.github/workflows/buildnpush.yml
+++ b/.github/workflows/buildnpush.yml
@@ -16,6 +16,6 @@ jobs:
             - name: Build the docker image
               run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest .
             - name: Tag the docker image
-              run: docker tag first-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
+              run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}first-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
             - name: Push the docker image 
               run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
