Added PG Scenario

--- a/.github/workflows/buildnpush.yml
+++ b/.github/workflows/buildnpush.yml
@@ -6,16 +6,27 @@ on:
       - main
 
 jobs:
-    nuild:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v4
-            - name: Docker Hub Login
-              run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-            - name: Build the docker image
-              run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest .
-            - name: Tag the docker image
-              run: docker tag first-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
-            - name: Push the docker image 
-              run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Docker Hub Login
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      - name: Build the docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest .
+
+      - name: Push the docker image 
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/first-app:latest
+
+      - name: Run Docker Compose
+        run: docker-compose up -d
+
+      - name: Check app logs
+        run: docker logs my_node_app
+
+      - name: Check if database is running
+        run: docker ps -a
