--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express":"4.21.2"
+    "express":"4.21.2",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "jest":"^29.7.0"
